--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,6 +11,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/79854224?v=4",
       "profile": "https://scratch.mit.edu/users/brourbeinsus/",
       "contributions": [
+        "ideas",
         "test",
         "code"
       ]
@@ -21,6 +22,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/78216950?v=4",
       "profile": "https://www.youtube.com/channel/UCjVX6g54M1dFtliUGy4kvsw/videos",
       "contributions": [
+        "ideas",
         "test",
         "code"
       ]
